added paragraph and pre tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main>
-        <h1>Sections Tags</h1>
+        <h1>Sections & Pre Tags</h1>
         <section>
             <h2>The pre tag</h2>
             <p>The <em>pre</em> HTML element represents preformatted text which is to be presented exactly as written in the HTML file. The text is typically rendered using a non-proportional, or monospaced, font. Whitespace inside this element is displayed as written.</p>
@@ -15,9 +15,9 @@
         <section>
             <h2>Javasript Examples</h2>
             <h3>Paragraph Example</h3>
-            <p>title.document.querySelectio('title')</p>
+            <p>title.document.querySelection('title')</p>
             <h3>Pre tag Example</h3>
-            <pre>title.document.querySelectio('title')</pre>
+            <pre>title.document.querySelection('title')</pre>
         </section>
     </main>
 </body>
